<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RIKapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hyg">Hyg</string>
    <string name="hygiejne_btn">Hygiejne</string>
    <string name="maaling_btn">Måling</string>
    <string name="title_activity_maalinger">Maalinger</string>
    <string name="skema_btn">Skema</string>
    <string name="info_btn">Info</string>
    <string name="title_activity_skema">Skema</string>
    <string name="title_activity_information">Information</string>
    <string name="howOftenAnswer">"Du har på sygehuset aftalt en hyppighed med sygeplejersken. Man kan ikke præcist aftale hvor mange gange man skal RIK'ke sig hver dag, idet det afhænger af årsagen til RIK. En tommelfingerregel er, at hvis du efter naturlig vandladning udtømmer mere end 100-150 ml. med kateter, kan du kateteriserer dig én gang mindre i døgnet. Den første uges tid kan det være en god idé at skrive ned, hvor meget du udtømmer. Du kan med jævne mellemrum kontrollere hvor meget du lader spontant og hvor meget du udtømmer med kateter."</string>
    <string name="howOftenQuestion">Hvor ofte skal jeg tømme blæren ved RIK?</string>
    <string name="whenToWashAnswer">"Det skal du, hvis der er synlig snavs. Hvis der ikke er synlig snavs, så er det nok at vaske dig 1 gang dagligt med vand og evt. en mild sæbe beregnet til formålet."</string>
    <string name="whenToWashQuestion">Hvornår skal jeg vaske penis og urinrørsåbningen inden udtømning af urin?</string>
    <string name="whereToTouchAnswer">"Du må kun røre på det yderste af kateteret – der hvor der ses et slags ”håndtag” – en studs. Det ser forskelligt ud fra kateter til kateter. Det vigtigt for at forebygge en infektion i urinvejene, at du ikke rører på selve kateteret, som skal føres gennem urinrøret til blæren."</string>
    <string name="whereToTouchQuestion">Hvor må jeg røre på kateteret?</string>
    <string name="whichSymptomsAnswer">"Du kan mærke svie og smerte ved vandladning. Du kan også opleve hyppige, små vandladninger, eller en pludselig voldsom trang. Du kan måske se, at urinen er uklar og grumset. Måske har du også en lille smule feber eller føler dig lidt utilpas."</string>
    <string name="whichSymptomsQuestion">Hvilke symptomer kan jeg mærke, hvis jeg har en infektion i urinvejene?</string>
    <string name="ifInfectedAnswer">"Hvis din læge har konstateret en urinvejsinfektion skal du følge lægens anvisninger og behandling. Derudover er det vigtigt at du drikker rigeligt, fordi det er med til at skylle bakterierne ud sammen med urinen. Det er også vigtigt at du i en kort periode kateriserer dig nogle ekstra gange for at undgå, at der står urin i blæren, som bakterierne hurtigt kan formere sig i. Det kan også hjælpe at drikke tranebærjuice svarende til 1,5 -2 glas dagligt = 300 ml dagligt."</string>
    <string name="ifInfectedQuestion">Hvad kan jeg gøre selv hvis jeg har en urinvejsinfektion?</string>
    <string name="avoidInfectionAnswer">"Der er nogle få ting du kan gøre, men som har meget stor betydning for at forebygge en urinvejsinfektion. Det er meget vigtigt med en god hygiejne. Det vil sige at håndvask før og efter er vigtigt, og afvask ved urinrørsåbningen ved synlig snavs og ellers 1 gang dagligt er vigtigt. Det er også vigtigt at forhuden trækkes helt tilbage inden du indfører kateteret. Sidst men ikke mindst er det meget vigtigt, at du kun berører kateteret på den studs der er beregnet til det ved indføringen."</string>
    <string name="avoidInfectionQuestion">Hvad kan jeg gøre for at undgå at få en infektion i urinvejene?</string>
    <string name="whenOutAnswer">"Du gør som du gør derhjemme. Det kan være en idé at medbringe vådservietter og en flaske håndsprit (kan købes på apoteker eller Matas butikker)i en lille toilettaske. Overvej inden du går i gang, hvordan det vil være praktisk at gribe det an på et fremmed toilet eller badeværelse. Det er vigtigt, at du overholder de samme procedurer for håndvask, vask af urinrørsåbning ved synlig snavs og selve udførelsen, som du gør i de vante omgivelser."</string>
    <string name="whenOutQuestion">Hvad gør jeg, når jeg er i byen?</string>
    <string name="title_activity_how_often">HowOften</string>
    <string name="title_activity_kontakt">Kontakt</string>
    <string name="kontakt_btn">Kontakt</string>
    <string name="kontakt_text">"<b>Kontakt1</b> \n Kontaktperson: kp1 \n Tlf: 12345678 \n Email: kp1@e.dk
        \n\n<b>Kontakt2</b> \n Kontaktperson: kp2 \n Tlf: 87654321 \n Email: kp2@e.dk"</string>
    <string name="kontakt_title">"Kontakt"</string>
    <string name="mlInput_hint">Intast ml</string>
    <string name="save_btn_name">Gem måling</string>
    <string name="noteInput_hint">Eventuelt note</string>
    <string name="title_activity_when_in_bladder">WhenInBladder</string>
    <string name="whenBladderQuestion">"Hvordan ved jeg om jeg er inde i blæren med kateteret?"</string>
    <string name="whenBladderAnswer">"Når urinen løber ud gennem kateret i toilettet, så er du i blæren. Vær opmærksom på, at kateteret ikke er langt oppe i blæren at hullerne på spidsen af kateteret kommer over niveau med urinen inde i blæren – så kan det nemlig ikke tømmes ud. Træk derfor kateteret langsom ud igen, og hvis der kommer mere urin, så vent til det ikke løber mere. Træk derefter resten ud i et jævnt træk.</string>
    <string name="doesItHurtQuestion">Gør det ondt at katerisere sig selv?</string>
    <string name="doesItHurtAnswer">""Nej, det gør ikke ondt, men du kan føle lidt ubehag i begyndelsen i urinrøret eller et kortvarigt jag i blæren. Hvis du oplever sådan et jag, så kan det skyldes at blærevæggen suges tæt til kateteret i blæren, når den tømmes. Det forsvinder hurtigt igen. "</string>
    <string name="whyBloodQuestion">Hvorfor kommer der somme tider lidt blod, når jeg kateriserer mig?</string>
    <string name="whyBloodAnswer">Det gør der, fordi der nemt kan komme en lille ridse i urinrørets slimhinde eller i blærens slimhinde. Det betyder ingenting, og er helt ufarligt. </string>
    <string name="whenHandWashQuestion">Hvornår skal jeg vaske hænder, når jeg skal RIK´ke?</string>
    <string name="whenHandWashAnswer">Det skal du før du påbegynder udtømningen. Det vil sige, at du finder det frem, som du skal bruge, og måske lukker du bukserne op og trækker bukserne ned. Så vasker du hænderne ifølge forskrifterne – klik her. Du skal også afslutte med at vaske hænderne, når du har tømt blæren for urin, og har trukket benklæderne op igen. Du skal tørre hænderne i et rent håndklæde/engangshåndklæde.</string>
    <string name="howHandWashQuestion">Hvordan skal jeg vaske mine hænder korrekt?</string>
    <string name="howHandWashAnswer">Du kan se videoen ved at klikke her</string>
    <string name="title_activity_does_it_hurt">DoesItHurt</string>
    <string name="title_activity_when_wash_hands">WhenWashHands</string>
    <string name="title_activity_how_wash_hands">HowWashHands</string>
    <string name="title_activity_why_blood">WhyBlood</string>
    <string name="maalMainText">Ny måling</string>
    <string name="title_activity_when_to_wash">WhenToWash</string>
    <string name="title_activity_avoid_infection">AvoidInfection</string>
    <string name="title_activity_if_infected">IfInfected</string>
    <string name="title_activity_when_out">WhenOut</string>
    <string name="title_activity_where_to_touch">WhereToTouch</string>
    <string name="title_activity_which_symptoms">WhichSymptoms</string>
    <string name="title_video">Video</string>
    <string name="skema_txt">Alle gemte målinger</string>
    <string name="video_intro">I videoen ovenfor vil du trin for trin kunne følge hvordan man skal håndtere og anvende kateteret.</string>
    <string name="videobtn">Video</string>
    <string name="mainmenu">Hovedmenu</string>
    <string name="step1">1. Vaske tommelfinger og håndled – dem kommer mange til at springe over</string>
    <string name="step2">2. Bruge sæbe eller håndsprit – bakterier kan ikke vaskes af uden sæbe eller håndsprit</string>
    <string name="step3">3. Hænderne skal være våde, når sæben kommer på – og tørres helt tørre bagefter</string>
    <string name="step4">4. Rene hænder bliver beskidte igen, hvis man rører ved vandhanen, når man lukker for vandet igen – brug albuen eller et stykke papir i stedet for hånden.</string>
    <string name="step5">5. Tage ringe eller ur af, når du vasker hænder – det er rene bakteriebomber</string>
    <string name="rik_help_app">RIK - Den hjælpende hånd</string>
    <string name="vejledning">Vejledning</string>

</resources>
